--- a/src/app/index2.html
+++ b/src/app/index2.html
@@ -48,7 +48,7 @@
                                 <td>{{person.Name}}</td>
                                 <td>{{person.City}}</td>
                                 <td>{{person.Country}}</td>
-                                <td><button ng-click="remove(person)">Remove</button></td>
+                                <td><button ng-click="remove(place)">Remove</button></td>
                             </tr>
                         </tbody>
                     </table>
