--- a/src/app/index3.html
+++ b/src/app/index3.html
@@ -30,8 +30,8 @@
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
                 <ul class="nav navbar-nav">
-                    <li><a ui-sref="view1">Table</a></li>
-                    <li><a ui-sref="view2">Form</a></li>
+                    <li ng-show="loggedIn"><a ui-sref="view1">Table</a></li>
+                    <li ng-show="loggedIn"><a ui-sref="view2">Form</a></li>
                     <li><a ui-sref="view3">Login Form</a></li>
                 </ul>
             </div>
